# python_zz

./: .gitignore  pyproject.toml
src/01-basic/: area_results.py  banknotes.py  comsumption.py  distance.py  distance_between.py  fuel_spent.py  simple_calculate.py  sphere_volume.py  the_greatest.py
src/02-middle/: bankaccount_poo.py  test_bankaccount_poo.py
topics/: 01-data_types.py  02-number_class.py  03-poo_basic.py
